--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-root {
---cor-de-fundo: #EBECEE;
+@import url("style/hearder.css");
+
+:root {
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
 }
 
 body {
-background-color: var(--cor-de-fundo);
-}
-
-h1 {
-    background-color: white;
+    background-color: var(--cor-de-fundo);
 }
