--- a/style/hearder.css
+++ b/style/hearder.css
@@ -2,9 +2,23 @@
     width: 24px;
     height: 24px;
     background-image: url("../img/menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
    
 .cabeçalho {
     background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.container_imagem {
+     padding: 1em;
 }
